// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectJudiciaryTypeFormComponent should render correctly 1`] = `
<app-test-host
  initialValues={[Function Object]}
>
  <select-judiciary-type-form>
    <form
      class="ng-untouched ng-pristine ng-valid"
      data-test-id="select-judiciary-type-form"
      novalidate=""
      pdk-form=""
    >
      <h1
        class="govuk-heading-l"
        pdk-typography="heading-large"
      >
        Select Judiciary type
      </h1>
      <pdk-grid
        class="govuk-grid-row"
        container=""
      >
        <pdk-grid
          class="govuk-grid-column-two-thirds"
          two-thirds=""
        >
          <judiciary-selection-input
            class="ng-untouched ng-pristine ng-valid"
            data-test-id="judiciary-selection-input"
            name="judiciarySelection"
            required=""
          >
            <div
              data-test-id="mock-judiciary-selection-input"
            >
              <span
                class="mock-judiciary-required"
              >
                true
              </span>
              <span
                class="mock-judiciary-selected-types"
              >
                [
    "Judge"
  ]
              </span>
              <span
                class="mock-judiciary-suggestions"
              >
                {
    "type": null,
    "judicialMembers": []
  }
              </span>
              <span
                class="mock-judiciary-ng-model"
              >
                {
    "Judge": {
      "id": "judge-1",
      "seqId": 1,
      "surname": "Smith",
      "forenames": "John",
      "judiciaryType": "Circuit Judge",
      "emailAddress": "john.smith@example.com",
      "specialisms": [
        "MURDER",
        "SEXUAL_OFFENCE"
      ]
    }
  }
              </span>
            </div>
          </judiciary-selection-input>
        </pdk-grid>
        <pdk-grid
          class="govuk-grid-column-full"
          full=""
        >
          <pdk-divider>
            <hr
              class="pdk-divider"
            />
          </pdk-divider>
        </pdk-grid>
        <pdk-grid
          class="govuk-grid-column-one-third"
          one-third=""
        >
          <pdk-form-group
            class="govuk-!-margin-top-4 pdk-form-group"
            pdk-margin-top="4"
          >
            <button
              class="govuk-button"
              data-test-id="continue-button"
              pdk-button=""
              type="submit"
            >
              Continue
            </button>
          </pdk-form-group>
        </pdk-grid>
      </pdk-grid>
    </form>
  </select-judiciary-type-form>
</app-test-host>
`;

exports[`SelectJudiciaryTypeFormComponent should render correctly with Judge type selected 1`] = `
<app-test-host
  initialValues={[Function Object]}
>
  <select-judiciary-type-form>
    <form
      class="ng-untouched ng-pristine ng-valid"
      data-test-id="select-judiciary-type-form"
      novalidate=""
      pdk-form=""
    >
      <h1
        class="govuk-heading-l"
        pdk-typography="heading-large"
      >
        Select Judiciary type
      </h1>
      <pdk-grid
        class="govuk-grid-row"
        container=""
      >
        <pdk-grid
          class="govuk-grid-column-two-thirds"
          two-thirds=""
        >
          <judiciary-selection-input
            class="ng-untouched ng-pristine ng-valid"
            data-test-id="judiciary-selection-input"
            name="judiciarySelection"
            required=""
          >
            <div
              data-test-id="mock-judiciary-selection-input"
            >
              <span
                class="mock-judiciary-required"
              >
                true
              </span>
              <span
                class="mock-judiciary-selected-types"
              >
                [
    "Judge"
  ]
              </span>
              <span
                class="mock-judiciary-suggestions"
              >
                {
    "type": "Judge",
    "judicialMembers": [
      {
        "id": "judge-1",
        "seqId": 1,
        "surname": "Smith",
        "forenames": "John",
        "judiciaryType": "Circuit Judge",
        "emailAddress": "john.smith@example.com",
        "specialisms": [
          "MURDER",
          "SEXUAL_OFFENCE"
        ]
      },
      {
        "id": "judge-2",
        "seqId": 2,
        "surname": "Doe",
        "forenames": "Jane",
        "judiciaryType": "District Judge",
        "emailAddress": "jane.doe@example.com",
        "specialisms": [
          "SEXUAL_OFFENCE"
        ]
      }
    ]
  }
              </span>
              <span
                class="mock-judiciary-ng-model"
              >
                {
    "Judge": {
      "id": "judge-1",
      "seqId": 1,
      "surname": "Smith",
      "forenames": "John",
      "judiciaryType": "Circuit Judge",
      "emailAddress": "john.smith@example.com",
      "specialisms": [
        "MURDER",
        "SEXUAL_OFFENCE"
      ]
    }
  }
              </span>
            </div>
          </judiciary-selection-input>
        </pdk-grid>
        <pdk-grid
          class="govuk-grid-column-full"
          full=""
        >
          <pdk-divider>
            <hr
              class="pdk-divider"
            />
          </pdk-divider>
        </pdk-grid>
        <pdk-grid
          class="govuk-grid-column-one-third"
          one-third=""
        >
          <pdk-form-group
            class="govuk-!-margin-top-4 pdk-form-group"
            pdk-margin-top="4"
          >
            <button
              class="govuk-button"
              data-test-id="continue-button"
              pdk-button=""
              type="submit"
            >
              Continue
            </button>
          </pdk-form-group>
        </pdk-grid>
      </pdk-grid>
    </form>
  </select-judiciary-type-form>
</app-test-host>
`;
